--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "android": {
       "package": "com.testing.app"
     },
+    "jsEngine": "hermes",
     "ios": {
       "bundleIdentifier": "com.testing.app"
     }
