--- a/package.json
+++ b/package.json
@@ -1,41 +1,44 @@
 {
   "scripts": {
-    "start": "expo start --dev-client",
-    "expo:prebuild": "expo prebuild",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "start": "expo start",
+    "android": "expo android",
+    "ios": "expo ios",
     "web": "expo start --web",
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@craftzdog/react-native-buffer": "^6.0.5",
-    "@noble/secp256k1": "^1.7.0",
-    "@types/react": "~18.0.24",
-    "@types/react-native": "~0.70.6",
+    "@noble/hashes": "1.1.3",
+    "@noble/secp256k1": "1.7.0",
+    "@polkadot/x-textdecoder": "10.1.11",
+    "@polkadot/x-textencoder": "10.1.11",
+    "@scure/base": "1.1.1",
+    "@scure/bip32": "1.1.1",
+    "@scure/bip39": "1.1.0",
     "expo": "~47.0.1",
     "expo-constants": "~14.0.2",
     "expo-linking": "~3.2.3",
+    "expo-random": "~13.0.0",
     "expo-router": "~0.0.34",
     "expo-splash-screen": "~0.17.3",
     "expo-status-bar": "~1.4.1",
+    "micro-btc-signer": "0.1.2",
     "patch-package": "^6.5.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.4",
     "react-native-gesture-handler": "~2.8.0",
-    "react-native-quick-base64": "^2.0.5",
-    "react-native-quick-crypto": "ArweaveNative/react-native-quick-crypto#built/rn701",
     "react-native-reanimated": "~2.11.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.7",
-    "stream-browserify": "^3.0.0",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6"
   },
   "resolutions": {
     "metro": "^0.73.1",
